force-app/main/default/objects/VolunteerShift__c/VolunteerShift__c.object-meta.xml
<CustomObject>
    <label>VolunteerShift</label>
    <nameField>
        <label>VolunteerShift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VolunteerShifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>