force-app/main/default/objects/VolunteerShift__c/fields/CompensationTotalShiftLeader__c.field-meta.xml
<CustomField>
    <fullName>CompensationTotalShiftLeader__c</fullName>
    <formula>DefaultCompensation__c  +  IndividualCompensationShiftLeader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompensationTotalShiftLeader</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>