force-app/main/default/objects/VolunteerShift__c/fields/DefaultCompensation__c.field-meta.xml
<CustomField>
    <fullName>DefaultCompensation__c</fullName>
    <label>DefaultCompensation</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>