force-app/main/default/objects/VolunteerShift__c/fields/IndividualCompensationShiftLeader__c.field-meta.xml
<CustomField>
    <fullName>IndividualCompensationShiftLeader__c</fullName>
    <label>IndividualCompensationShiftLeader</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>