force-app/main/default/objects/VolunteerShift__c/fields/IsIBANPayment__c.field-meta.xml
<CustomField>
    <fullName>IsIBANPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIBANPayment</label>
    <type>Checkbox</type>
</CustomField>