force-app/main/default/objects/VolunteerShift__c/fields/ShiftLeader__c.field-meta.xml
<CustomField>
    <fullName>ShiftLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShiftLeader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VolunteerShifts</relationshipLabel>
    <relationshipName>VolunteerShifts</relationshipName>
    <type>Lookup</type>
</CustomField>